small fix for bug in dark mode

--- a/src/style/alert.css
+++ b/src/style/alert.css
@@ -1,5 +1,4 @@
 .alert-parent {
-    background-color: white;
     width: fit-content;
     vertical-align: auto;
     padding: 10px 20px;
